työstetty yläpalkkia, vaatii lisätyötä

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Reservations</a></li>
                 <li><a href="#">Contact</a></li>
+                <div>
+                    <form id="loginform">
+                        <img src="64cat.jpg" alt="cat">
+                        <input type="text" placeholder="Search">
+                        <button type="submit">Search</button>
+                    </form>
+                </div>
             </ul>
         </nav>
     </header>
