--- a/index.html
+++ b/index.html
@@ -25,23 +25,19 @@
         </nav>
     </header>
     <main>
-        <!-- Rest of the content goes here -->
-        <div class="image-grid">
-            <a href="#"><img src="64cat.jpg" alt="Image 1"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 2"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 3"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 4"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 5"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 6"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 7"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 8"></a>
-            <a href="#"><img src="64cat.jpg" alt="Image 9"></a>
-            <!-- MORE CATS -->
+        <!-- Slider missä pizzoja -->
+        <div class='slider'>
+            <img src="64cat.jpg" alt="cat">
         </div>
+        <!-- Kuva josta pääsee tekemään oman pizzan -->
+        <div class='create'>
+            <h1>CREATE YOUR OWN PIZZA</h1>
+            <p>Choose your favorite ingredients and create your own pizza</p>
+            <button>CREATE</button>
     </main>
     <footer>
         <!-- Footer content goes here -->
     </footer>
-    
+
 </body>
 </html>
