Start of the layout

--- a/index.html
+++ b/index.html
@@ -3,40 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
+        <h1>PIZZA</h1> <!--logo-->
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">Reservations</a></li>
-                <li><a href="#">Contact</a></li>
-                <div>
-                    <form id="loginform">
-                        <img src="64cat.jpg" alt="cat">
-                        <input type="text" placeholder="Search">
-                        <button type="submit">Search</button>
-                    </form>
-                </div>
+                <li><a href="#">Create your own pizza</a></li>
             </ul>
         </nav>
     </header>
     <main>
+      <div class='home-page'>
         <!-- Slider missä pizzoja -->
         <div class='slider'>
-            <img src="64cat.jpg" alt="cat">
+            <img src="img/64cat.jpg" alt="cat">
         </div>
         <!-- Kuva josta pääsee tekemään oman pizzan -->
         <div class='create'>
             <h1>CREATE YOUR OWN PIZZA</h1>
             <p>Choose your favorite ingredients and create your own pizza</p>
             <button>CREATE</button>
+        </div>
+      </div>
+
+      <div class='menu-page'>
+
+      </div>
+
+      <div class='create-page'>
+
+      </div>
+
     </main>
     <footer>
-        <!-- Footer content goes here -->
+        <p>moi</p>
     </footer>
 
 </body>
