--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="onStart.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,6 +35,11 @@
             <h1>CREATE YOUR OWN PIZZA</h1>
             <p>Choose your favorite ingredients and create your own pizza</p>
             <button>CREATE</button>
+        </div>
+        <!-- Menu missä on listattu pizzat -->
+        <div id="pizza-grid">
+
+        </div>
     </main>
     <footer>
         <!-- Footer content goes here -->
