Refine CSS styles

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
     </main>
     <footer>
-        <p>moi</p>
+        <h2>lorem</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni minus vitae tempora quo est repellendus illo nostrum, incidunt recusandae aspernatur ullam enim suscipit eos maxime blanditiis, fuga ex, ratione consectetur!</p>
     </footer>
 
 </body>
