implement dynamic content hiding and pizza grid start

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </div>
         <nav>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">MENU</a></li>
-                <li><a href="#">CREATE YOUR OWN PIZZA</a></li>
+                <li><a href="#" id="nav_homelink">HOME</a></li>
+                <li><a href="#" id="nav_menulink">MENU</a></li>
+                <li><a href="#" id="nav_pizzalink">CREATE YOUR OWN PIZZA</a></li>
             </ul>
         </nav>
 
@@ -34,7 +34,7 @@
     </header>
     <main>
       <!-- Home page -->
-      <div class='home-page'>
+      <div class='contentpage' id="home-page">
         <!-- Slider missä pizzoja -->
         <div class='slider'>
             <img src="img/64cat.jpg" alt="cat">
@@ -47,12 +47,12 @@
       </div>
 
       <!-- Menu page -->
-      <div class='menu-page'>
+      <div class='contentpage' id="menu-page">
 
       </div>
 
       <!-- Create ur own pizza page -->
-      <div class='create-page'>
+      <div class='contentpage' id="create-page">
 
       </div>
 
