--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Enrico </title>
+    <link rel="icon" href="img/favicon.png">
     <!---CSS link-->
     <link rel="stylesheet" href="css/style.css">
     <!---JS links-->
@@ -19,6 +20,7 @@
 <body>
     <header>
       <div class='logo'> <!--logo tähän-->
+        <img src='img/favicon.png' alt='Logo'>
         <h1>PIZZA</h1>
       </div>
         <nav>
@@ -40,8 +42,36 @@
       <div class='contentpage' id="home-page">
         <!-- Slider missä pizzoja -->
         <div class='slider'>
-            <img src="img/64cat.jpg" alt="cat">
+          <div class='sliderFade'>
+            <div class='slideNumber'>1 / 3</div>
+            <img src="img/64cat.jpg" style="width:100%">
+            <div class='sliderText'>Caption Text</div>
+          </div>
+
+          <div class='sliderFade'>
+            <div class='slideNumber'>2 / 3</div>
+            <img src="img/hackerman.png" style="width:100%">
+            <div class='sliderText'>Caption Text</div>
+          </div>
+
+          <div class='sliderFade'>
+            <div class='slideNumber'>3 / 3</div>
+            <img src="img/jorma.jpg" style="width:100%">
+            <div class='sliderText'>Caption Text</div>
+          </div>
+
+          <a class='prev' onclick='stopAutoSlide(); plusSlides(-1)'>&#10094;</a>
+          <a class='next' onclick='stopAutoSlide(); plusSlides(1)'>&#10095;</a>
         </div>
+        <br>
+
+        <!-- Dots -->
+        <div style='text-align:center'>
+          <span class='dot' onclick='currentSlide(1)'></span>
+          <span class='dot' onclick='currentSlide(2)'></span>
+          <span class='dot' onclick='currentSlide(3)'></span>
+        </div>
+
         <!-- Kuva josta pääsee tekemään oman pizzan -->
         <div class='create'>
             <h1>CREATE YOUR OWN PIZZA</h1>
