pizzaphotos on carousel

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         <div class="slider">
           <div class="sliderFade">
             <div class="slideNumber">1 / 3</div>
-            <img src="img/64cat.jpg" style="width: 100%" />
+            <img src="img/pizzas/Mexicana.jpg" style="width: 100%" />
             <div class="sliderText">Caption Text</div>
           </div>
 
           <div class="sliderFade">
             <div class="slideNumber">2 / 3</div>
-            <img src="img/hackerman.png" style="width: 100%" />
+            <img src="img/pizzas/Meat.jpg" style="width: 100%" />
             <div class="sliderText">Caption Text</div>
           </div>
 
