--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
         <img src="img/64cat.jpg" alt="Profile picture" />
         <span>Username</span>
         <i class="bx bxs-down-arrow"></i>
+        <div id="dropdown-menu" style="display: none">
+          <ul>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Log out</a></li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
