--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <i class="bx bxs-down-arrow"></i>
         <div id="dropdown-menu" style="display: none">
           <ul>
-            <li><a href="#">Profile</a></li>
+            <li><a id="profileLink">Profile</a></li>
             <li><a href="#">Log out</a></li>
           </ul>
         </div>
@@ -103,6 +103,9 @@
 
       <!-- Create ur own pizza page -->
       <div class="contentpage" id="create-page"></div>
+
+      <!--- Profile page -->
+      <div class="contentpage" id="profile-page"></div>
     </main>
     <footer>
       <h2>lorem</h2>
