--- a/index.html
+++ b/index.html
@@ -5,49 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Enrico</title>
     <link rel="icon" href="img/favicon.png" />
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza Enrico</title>
-    <link rel="icon" href="img/favicon.png" />
-    <!---CSS link-->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <!---JS links-->
     <script src="onStart.js" defer></script>
-    <!---Boxicons link-->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <!---Google fonts links-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bilbo&display=swap"
-      rel="stylesheet"
-    />
-    />
   </head>
   <body>
     <header>
       <div class="logo">
-        <!--logo tähän-->
         <img src="img/favicon.png" alt="Logo" />
-      <div class="logo">
-        <!--logo tähän-->
-        <img src="img/favicon.png" alt="Logo" />
-        <h1>PIZZA</h1>
       </div>
       <nav>
         <ul>
@@ -56,9 +30,7 @@
           <li><a href="#" id="nav_pizzalink">CREATE YOUR OWN PIZZA</a></li>
         </ul>
       </nav>
-
       <div class="shoppingCart">
-        <!-- Ostoskorin kuvake tai linkki -->
         <svg
           id="shoppingCartIcon"
           aria-hidden="true"
@@ -76,125 +48,53 @@
             d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"
           />
         </svg>
-
-        <!-- Ostoskorin tuotteet -->
-        <ul class="cart-items" style="display: none">
-          <!-- Ostoskorin sisältö lisätään tänne dynaamisesti -->
-        </ul>
+        <ul class="cart-items" style="display: none"></ul>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#" id="nav_homelink">HOME</a></li>
-          <li><a href="#" id="nav_menulink">MENU</a></li>
-          <li><a href="#" id="nav_pizzalink">CREATE YOUR OWN PIZZA</a></li>
-        </ul>
-      </nav>
-
-      <div class="shoppingCart">
-        <!-- Ostoskorin kuvake tai linkki -->
-        <svg
-          id="shoppingCartIcon"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          fill="none"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"
-          />
-        </svg>
-
-        <!-- Ostoskorin tuotteet -->
-        <ul class="cart-items" style="display: none">
-          <!-- Ostoskorin sisältö lisätään tänne dynaamisesti -->
-        </ul>
-      </div>
-
       <div class="user-info">
         <img src="img/64cat.jpg" alt="Profile picture" />
         <span>Username</span>
         <i class="bx bxs-down-arrow"></i>
-
         <div id="dropdown-menu" style="display: none">
           <ul>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Log out</a></li>
           </ul>
         </div>
-        ======= >>>>>>> layout1
       </div>
     </header>
     <main>
-      <!-- Home page -->
       <div class="contentpage" id="home-page">
-      <div class="contentpage" id="home-page">
-        <!-- Slider missä pizzoja -->
         <div class="slider">
           <div class="sliderFade">
             <div class="slideNumber">1 / 3</div>
-
             <img src="img/pizzas/Mexicana.jpg" style="width: 100%" />
-            =======
-            <img src="img/64cat.jpg" style="width: 100%" />
-
             <div class="sliderText">Caption Text</div>
           </div>
-
           <div class="sliderFade">
             <div class="slideNumber">2 / 3</div>
             <img src="img/pizzas/Meat.jpg" style="width: 100%" />
-            =======
-            <img src="img/hackerman.png" style="width: 100%" />
-            >>>>>>> layout1
             <div class="sliderText">Caption Text</div>
           </div>
-
-          <div class="sliderFade">
-            <div class="slideNumber">3 / 3</div>
-            <img src="img/jorma.jpg" style="width: 100%" />
-            <div class="sliderText">Caption Text</div>
           <div class="sliderFade">
             <div class="slideNumber">3 / 3</div>
             <img src="img/jorma.jpg" style="width: 100%" />
             <div class="sliderText">Caption Text</div>
           </div>
-
-          <a class="prev" onclick="stopAutoSlide(); plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="stopAutoSlide(); plusSlides(1)">&#10095;</a>
           <a class="prev" onclick="stopAutoSlide(); plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="stopAutoSlide(); plusSlides(1)">&#10095;</a>
         </div>
         <br />
-
-        <!-- Dots -->
         <div style="text-align: center">
           <span class="dot" onclick="currentSlide(1)"></span>
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
         </div>
-
-        <!-- Kuva josta pääsee tekemään oman pizzan -->
         <div class="create">
           <h1>CREATE YOUR OWN PIZZA</h1>
           <p>Choose your favorite ingredients and create your own pizza</p>
         </div>
       </div>
-
-      <!-- Menu page -->
       <div class="contentpage" id="menu-page"></div>
-
-
-      <!-- Create ur own pizza page -->
-      <div class="contentpage" id="create-page"></div>
-
-      <!-- creating your own pizza -->
-
       <div class="contentpage" id="create-page">
         <h3 class="otsikko">PERFETTA</h3>
         <p class="teksti">
