--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <i class="bx bxs-down-arrow"></i>
         <div id="dropdown-menu" style="display: none">
           <ul>
-            <li><a href="#">Profile</a></li>
+            <li><a id="profileLink">Profile</a></li>
             <li><a href="#">Log out</a></li>
           </ul>
         </div>
