--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       </nav>
 
       <div class="user-info">
-        <img src="img/64cat.jpg" alt="Profile picture" />
-        <span>Username</span>
+        <span>Login</span>
         <i class="bx bxs-down-arrow"></i>
         <div id="dropdown-menu" style="display: none">
           <ul>
@@ -109,12 +108,7 @@
     </main>
     <footer>
       <h2>lorem</h2>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni minus
-        vitae tempora quo est repellendus illo nostrum, incidunt recusandae
-        aspernatur ullam enim suscipit eos maxime blanditiis, fuga ex, ratione
-        consectetur!
-      </p>
+      <p>Lorem, ipsum dolor</p>
     </footer>
   </body>
 </html>
