--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pizza Enrico</title>
     <link rel="icon" href="img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="backendscript.js"></script>
     <script src="onStart.js" defer></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
