--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -22,12 +22,13 @@
     <header>
       <div class="logo">
         <img src="img/favicon.png" alt="Logo" />
+        <h1>PIZZA</h1>
       </div>
       <nav>
         <ul>
           <li><a href="#" id="nav_homelink">HOME</a></li>
           <li><a href="#" id="nav_menulink">MENU</a></li>
-          <li><a href="#" id="nav_pizzalink">CREATE YOUR OWN PIZZA</a></li>
+          <li><a href="#" id="nav_pizzalink">CREATE</a></li>
         </ul>
       </nav>
       <div class="shoppingCart">
@@ -52,7 +53,6 @@
       </div>
       <div class="user-info">
         <span>Login</span>
-        <i class="bx bxs-down-arrow"></i>
         <div id="dropdown-menu" style="display: none">
           <ul>
             <li><a id="profileLink">Profile</a></li>
