--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="sliderFade">
             <div class="slideNumber">3 / 3</div>
-            <img src="img/jorma.jpg" style="width: 100%" />
+            <img src="img/pizzas/placeholder_pizza.jpg" style="width: 100%" />
             <div class="sliderText">Caption Text</div>
           </div>
           <a class="prev" onclick="stopAutoSlide(); plusSlides(-1)">&#10094;</a>
