--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
       <div class="contentpage" id="create-page">
         <h3 class="otsikko">PERFETTA</h3>
         <p class="teksti">
-          Pizza kuin suoraan päiväunistasi, sillä sen täytteet päätät sinä.
-          Kokeile, miksaa, hulluttele ja löydä se maistuvin makumaailma juuri
-          sinulle.
+          Pizza as if straight from your daydreams, because you decide its
+          toppings. Try, mix, go crazy and find the tastiest flavor world just
+          for you.
         </p>
         <!-- Pizza Koko Valinnat -->
         <div>
-          <h3>Koko</h3>
+          <h3>Size</h3>
           <label>
             <input type="radio" name="size" value="Pieni" data-price="5" />
-            Pieni (5€) </label
+            Small (5€) </label
           ><br />
           <label>
             <input
@@ -117,17 +117,17 @@
               data-price="8"
               checked
             />
-            Normaali (8€) </label
+            Normal (8€) </label
           ><br />
           <label>
-            <input type="radio" name="size" value="Iso" data-price="14" /> Iso
+            <input type="radio" name="size" value="Iso" data-price="14" /> Large
             (14€)
           </label>
         </div>
 
         <!-- Pohja Valinnat -->
         <div>
-          <h3>Pohja</h3>
+          <h3>Base</h3>
           <label>
             <input
               type="radio"
@@ -136,27 +136,27 @@
               data-price="0"
               checked
             />
-            Normaali (0€) </label
+            Normal (0€) </label
           ><br />
           <label>
             <input type="radio" name="base" value="Paksu" data-price="1" />
-            Paksu (1€)
+            Pan (1€)
           </label>
         </div>
 
         <!-- Täytteet -->
         <div id="toppings-container">
-          <h3>Täytteet</h3>
+          <h3>Toppings</h3>
           ><br />
           <!-- Lisää täytteitä samalla tavalla -->
         </div>
 
-        <button id="submitToppings">Lisää ostoskoriin</button>
+        <button id="submitToppings">Add to basket</button>
       </div>
     </main>
     <footer>
-      <h2>lorem</h2>
-      <p>Lorem, ipsum dolor</p>
+      <h2>Pizza Enrico</h2>
+      <p>Group 7</p>
     </footer>
   </body>
 </html>
