--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <img src="img/favicon.png" alt="Logo" />
-        <h1>PIZZA</h1>
+        <h1>PIZZA ENRICO</h1>
       </div>
       <nav>
         <ul>
@@ -106,22 +106,22 @@
         <div>
           <h3>Size</h3>
           <label>
-            <input type="radio" name="size" value="Pieni" data-price="5" />
+            <input type="radio" name="size" value="Small" data-price="5" />
             Small (5€) </label
           ><br />
           <label>
             <input
               type="radio"
               name="size"
-              value="Normaali"
+              value="Normal"
               data-price="8"
               checked
             />
             Normal (8€) </label
           ><br />
           <label>
-            <input type="radio" name="size" value="Iso" data-price="14" /> Large
-            (14€)
+            <input type="radio" name="size" value="Large" data-price="14" />
+            Large (14€)
           </label>
         </div>
 
@@ -132,14 +132,14 @@
             <input
               type="radio"
               name="base"
-              value="Normaali"
+              value="Normal"
               data-price="0"
               checked
             />
             Normal (0€) </label
           ><br />
           <label>
-            <input type="radio" name="base" value="Paksu" data-price="1" />
+            <input type="radio" name="base" value="Pan" data-price="1" />
             Pan (1€)
           </label>
         </div>
